--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,26 @@
     "description": "Blocker",
     "version": "1.0",
     "manifest_version": 3,
+    "permissions": [
+        "webRequest",
+        "declarativeNetRequest"
+    ],
+    "host_permissions": [
+        "<all_urls>"
+    ],
+    "background": {
+        "service_worker": "src/background.js"
+    },
+    "declarative_net_request": {
+        "rule_resources": [
+            {
+                "id": "ruleset_1",
+                "enabled": true,
+                "path": "rules.json"
+            }
+        ]
+    },
     "action": {
-      "default_popup": "popup/hello.html"
+        "default_popup": "popup/hello.html"
     }
-  }
+}
