--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,11 @@
 {
     "name": "Blocker",
-    "description": "Blocker",
+    "description": "Blocks sites of your own choosing for free, forever",
+    "icons": {
+        "16": "icons/icon-16.png",
+        "32": "icons/icon-32.png",
+        "64": "icons/icon-64.png"
+    },
     "version": "1.0",
     "manifest_version": 3,
     "permissions": [
